--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div style="background-color:  #FEEAE9" id="carouselExampleControls" class="carousel slide mt-5 border-radius" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <div class="row p-3  d-flex justify-content-evenly align-items-center">
+                <div class="row p-3 d-flex justify-content-evenly align-items-center">
                   <div class="col-md-7 p-5">
                    <h1>Mega LCD TV For Sports</h1>
                    <h6>This is the best in the world for people who just want to waste <br> time in front of tv.</h6>
@@ -64,8 +64,8 @@
                   </div>
                 </div>
               </div>
-              <div class="carousel-item">
-                <div class="row  p-3 d-flex justify-content-evenly align-items-center">
+              <div class="carousel-item carousel">
+                <div class="row p-3 d-flex justify-content-evenly align-items-center">
                     <div class="col-md-7 p-5">
                       <h1>Cool Dude Headphone</h1>
                       <h6>This is the headphone in the world for people who just want to <br> waste time in front of funky world.</h6>
@@ -78,8 +78,8 @@
                   </div>
               </div>
               <div class="carousel-item">
-                <div class="row p-3  d-flex justify-content-evenly align-items-center">
-                    <div class="col-md-7 p-5">
+                <div class="row  box-padding p-3 d-flex justify-content-evenly align-items-center">
+                    <div class="col-md-7 p-5 box-padding  ">
                       <h1>X-Box for your living room</h1>
                       <h6>This is the best x-box in the world for people who just want to waste <br> time in front of fake sports.</h6>
                       <h1>$420</h1>
