--- a/index.html
+++ b/index.html
@@ -48,8 +48,13 @@
         </nav>
 
           <!-- navbar end -->
-
+<!-- 
           <div style="background-color:  #FEEAE9" id="carouselExampleControls" class="carousel slide mt-5 border-radius" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+              <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+              <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+            </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="row p-3 d-flex justify-content-evenly align-items-center">
@@ -91,15 +96,59 @@
                   </div>
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </a>
+        
+          </div> -->
+
+          <div style="background-color:  #FEEAE9" id="carouselExampleIndicators" class="carousel slide mt-5 border-radius" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row p-3 d-flex justify-content-evenly align-items-center">
+                  <div class="col-md-7 p-5">
+                   <h1>Mega LCD TV For Sports</h1>
+                   <h6>This is the best in the world for people who just want to waste <br> time in front of tv.</h6>
+                   <h1>$620</h1>
+                   <button type="button" class="btn btn-info button">Buy Now</button>
+                  </div>
+                  <div class="col-md-5">
+                    <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item carousel">
+                <div class="row p-3 d-flex justify-content-evenly align-items-center">
+                  <div class="col-md-7 p-5">
+                    <h1>Cool Dude Headphone</h1>
+                    <h6>This is the headphone in the world for people who just want to <br> waste time in front of funky world.</h6>
+                    <h1>$520</h1>
+                    <button type="button" class="btn btn-info button">Buy Now</button>
+                  </div>
+                  <div class="col-md-5">
+                    <img src="images/banner-images/headphone.png" class="d-block w-100 "alt="...">
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row  box-padding p-3 d-flex justify-content-evenly align-items-center">
+                  <div class="col-md-7 p-5 box-padding  ">
+                    <h1>X-Box for your living room</h1>
+                    <h6>This is the best x-box in the world for people who just want to waste <br> time in front of fake sports.</h6>
+                    <h1>$420</h1>
+                    <button type="button" class="btn btn-info button">Buy Now</button>
+                  </div>
+                  <div class="col-md-5">
+                    <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+              </div>
+            </div>
+   
           </div>
+ 
     </header>
 
 <!-- header end -->
@@ -130,6 +179,7 @@
           </div>
 
           <!-- poduct categories end -->
+          
           <section id="shoes" class="container">
           <h1>Shoes</h1>
           <div class="row row-cols-1 row-cols-md-3 g-4">
